Final update for assignment

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=StudentGrade
+application.vendor=lenovo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,7 +33,9 @@ dist.jar=${dist.dir}/StudentGrade.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StudentGrade
+endorsed.classpath=
 excludes=
+file.reference.junit-3.8.1.jar=C:\\Users\\lenovo\\Desktop\\Amal work\\junit-3.8.1.jar
 file.reference.junit.jar=C:\\Users\\nalma\\OneDrive\\Desktop\\junit.jar
 includes=**
 jar.compress=false
@@ -41,8 +44,11 @@ javac.classpath=
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
-javac.processormodulepath=
+javac.modulepath=\
+    ${file.reference.junit-3.8.1.jar}:\
+    ${libs.junit_5.classpath}
+javac.processormodulepath=\
+    ${libs.junit_5.classpath}
 javac.processorpath=\
     ${javac.classpath}
 javac.source=18
@@ -52,7 +58,8 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${file.reference.junit.jar}
 javac.test.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${libs.junit_5.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -86,12 +93,14 @@ run.classpath=\
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
 run.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${libs.junit_5.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 run.test.modulepath=\
-    ${javac.test.modulepath}
+    ${javac.test.modulepath}:\
+    ${libs.junit_5.classpath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
