--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StudentGrade
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3-javadoc.jar=C:\\Users\\lenovo\\Desktop\\Amal work\\hamcrest-core-1.3-javadoc.jar
 file.reference.junit-3.8.1.jar=C:\\Users\\lenovo\\Desktop\\Amal work\\junit-3.8.1.jar
+file.reference.junit-4.13.2-javadoc.jar=C:\\Users\\lenovo\\Desktop\\Amal work\\junit-4.13.2-javadoc.jar
 file.reference.junit.jar=C:\\Users\\nalma\\OneDrive\\Desktop\\junit.jar
 includes=**
 jar.compress=false
@@ -46,9 +48,13 @@ javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
     ${file.reference.junit-3.8.1.jar}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${libs.junit_4.classpath}
 javac.processormodulepath=\
-    ${libs.junit_5.classpath}
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${libs.junit_4.classpath}
 javac.processorpath=\
     ${javac.classpath}
 javac.source=18
@@ -59,7 +65,9 @@ javac.test.classpath=\
     ${file.reference.junit.jar}
 javac.test.modulepath=\
     ${javac.modulepath}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -94,13 +102,17 @@ run.classpath=\
 run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${libs.junit_4.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 run.test.modulepath=\
     ${javac.test.modulepath}:\
-    ${libs.junit_5.classpath}
+    ${file.reference.junit-4.13.2-javadoc.jar}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${libs.junit_4.classpath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
